# docling-parse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  README.md  build.py  pyproject.toml
.github/: mergify.yml
.github/actions/setup-deps/: action.yml
.github/actions/setup-poetry/: action.yml
.github/scripts/: build_rhel.sh  check_wheel.py
.github/workflows/: cd.yml  checks.yml  ci.yml  release.yml  rhel.yml  wheels.yml
app/: parse.cpp  parse_v1.cpp  parse_v2.cpp  parse_v2_fonts.cpp  pybind_parse.cpp  scorpio.cpp  scorpio_fonts.cpp
cmake/: extlib_cxxopts.cmake  extlib_jpeg.cmake  extlib_json.cmake  extlib_loguru.cmake  extlib_pybind11.cmake  extlib_qpdf.cmake  extlib_qpdf_v10.cmake  extlib_qpdf_v11.cmake  extlib_utf8.git.cmake  os_opts.cmake  subdirlist.cmake
docling_parse/: document.py  eval.py  extract_text_from_bbbox.py  extract_text_from_bbox.py  pdf_parser.py  processing_dir.py  processing_s3.py  run.py  s3_processing.py  utils.py  visualize.py
src/: include_libs.h  resources.h  script_generate_libs.sh  script_indent_files.sh  utils.h  v1.h  v2.h  version.txt
src/comp_library/: IO_library.h  container_library.h  function_library.cu  function_library.h  keyword_search.h  logic_library.h  meta_library.h  string_library.h  string_library.h~  system_library.h
src/comp_library/IO_library/: BCON.h  BINARY.h  CIF.h  CSV.h  HDF5.h  HTML.h  IO_types.h  JSON.h  TAR.h  TARGZ.h  TXT.h  XML.h
src/comp_library/container_library/: container.h
src/comp_library/function_library/: function.h  function_enumeration_types.h  function_library_typedefs.h  include_function_library.cu  index_type_map.h
src/comp_library/keyword_search/: exact.h  keyword_set.h  ngrams.h  partial.h  regex.h  simstring_search.h
src/comp_library/logic_lib/: leaf.h  logic_lib.h  node.h  operator.h
src/comp_library/meta_library/: container_like.h  stream_like.h
src/comp_library/string_library/: utf8.h
src/math_library/geometry_library/: geometric_objects.h
src/proj_folders/: logging_library.h  pdf_assembler.h  pdf_interface.h  pdf_library.h  pdf_parser.h
src/proj_folders/logging_library/: logger.h  logger_macros.h
src/proj_folders/pdf_assembler/: annotator.h  cluster_generator.h  extractor.h  ingestor.h  inserter.h  keys.h  primitive.h  transformer.h
src/proj_folders/pdf_interface/: assembler.h  ocr_merger.h  parser.h
src/proj_folders/pdf_library/: core.h  qpdf.h
src/proj_folders/pdf_parser/: post_processor.h  structures.h
src/pybind/: docling_parser.h  docling_parser_v1.h  docling_parser_v2.h  docling_resources.h  docling_sanitizer.h
src/utils/: IO_library.h  container_library.h  geometric_objects.h  logging_library.h  string_library.h  system_library.h
src/utils/IO_library/: JSON.h  TXT.h
src/utils/container_library/: container_enums.h  container_types.h
src/utils/logging_library/: logger.h
src/utils/meta_library/: stream_range.h  string_like.h
src/utils/string_library/: char_operations.h  string_operations.h
src/utils/system_library/: file_operations.h
src/v1/: include_libs.h
src/v1/proj_folders/: pdf_library.h  pdf_parser.h
src/v1/pybind/: docling_parser.h
src/v1/utils/: IO_library.h  container_library.h  geometric_objects.h  logging_library.h  meta_library.h  string_library.h  system_library.h
src/v2/: enums.h  parser.h  pdf_decoder.h  pdf_resource.h  pdf_sanitator.h  pdf_state.h  utils.h
src/v2/pdf_decoders/: document.h  page.h  stream.h  stream_enums.h
src/v2/pdf_resources/: page_cell.h  page_cells.h  page_dimension.h  page_font.h  page_fonts.h  page_grph.h  page_grphs.h  page_image.h  page_images.h  page_line.h  page_lines.h  page_xobject.h  page_xobjects.h
src/v2/pdf_sanitators/: cells.h  constants.h  lines.h  page_dimension.h
src/v2/pdf_states/: global.h  grph.h  line.h  text.h
src/v2/pybind/: docling_parser_v2.h
src/v2/qpdf/: annots.h  instruction.h  stream_decoder.h  to_json.h
src/v2/utils/: files.h  json.h  string.h  timer.h  values.h
tests/: test_parse.py  test_parse_v1.py  test_parse_v2.py
tests/data/groundtruth/: cropbox_versus_mediabox_01.pdf.page_no_1.original.py.json  cropbox_versus_mediabox_01.pdf.page_no_1.py.json  cropbox_versus_mediabox_01.pdf.page_no_1.sanitized.py.json  cropbox_versus_mediabox_01.pdf.v1.json  cropbox_versus_mediabox_01.pdf.v2.json  cropbox_versus_mediabox_01.pdf.v2.p=0.json  cropbox_versus_mediabox_02.pdf.page_no_1.original.py.json  cropbox_versus_mediabox_02.pdf.page_no_1.py.json  cropbox_versus_mediabox_02.pdf.page_no_1.sanitized.py.json  cropbox_versus_mediabox_02.pdf.page_no_2.original.py.json  cropbox_versus_mediabox_02.pdf.page_no_2.py.json  cropbox_versus_mediabox_02.pdf.page_no_2.sanitized.py.json  cropbox_versus_mediabox_02.pdf.page_no_3.original.py.json  cropbox_versus_mediabox_02.pdf.page_no_3.py.json  cropbox_versus_mediabox_02.pdf.page_no_3.sanitized.py.json  cropbox_versus_mediabox_02.pdf.v1.json  cropbox_versus_mediabox_02.pdf.v1.p=0.json  cropbox_versus_mediabox_02.pdf.v1.p=1.json  cropbox_versus_mediabox_02.pdf.v2.json  cropbox_versus_mediabox_02.pdf.v2.p=0.json  cropbox_versus_mediabox_02.pdf.v2.p=1.json  duplicate_bold_text_01.pdf.page_no_1.original.py.json  duplicate_bold_text_01.pdf.page_no_1.py.json  duplicate_bold_text_01.pdf.page_no_1.sanitized.py.json  duplicate_bold_text_01.pdf.v1.p=0.json  duplicate_bold_text_01.pdf.v2.json  duplicate_bold_text_01.pdf.v2.p=0.json  font_01.pdf.page_no_1.original.py.json  font_01.pdf.page_no_1.py.json  font_01.pdf.page_no_1.sanitized.py.json  font_01.pdf.v1.p=0.json  font_01.pdf.v2.json  font_01.pdf.v2.p=0.json  font_02.pdf.page_no_1.original.py.json  font_02.pdf.page_no_1.py.json  font_02.pdf.page_no_1.sanitized.py.json  font_02.pdf.v1.p=0.json  font_02.pdf.v2.json  font_02.pdf.v2.p=0.json  font_03.pdf.page_no_1.original.py.json  (+165 more)
tests/pdf_docs/tests/: 2305.14962v1.pdf.json  2305.14962v1.pdf.v2.bytesio.json  2305.14962v1.pdf.v2.filename.json  2305.14962v1.pdf_p=0.json  2305.14962v1.pdf_p=0.v2.bytesio.json  2305.14962v1.pdf_p=0.v2.filename.json  2305.14962v1.pdf_p=1.json  (+186 more)
(+402 files in other folders)
