[tool.poetry]
name = "docling-parse"
version = "0.1.0"
description = "Simple package to extract text with coordinates from programmatic PDF's"
authors = ["Peter Staar <taa@zurich.ibm.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docling_parse"}]
include = [
    {path = "docling_parse/*.so", format = "wheel"},
    {path = "docling_parse/pdf_resources", format = "wheel"}
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

