[tool.poetry]
name = "docling-parse"
version = "0.1.0"
description = "Simple package to extract text with coordinates from programmatic PDFs"
authors = ["Peter Staar <taa@zurich.ibm.com>"]
maintainers = [
    "Peter Staar <taa@zurich.ibm.com>",
    "Christoph Auer <cau@zurich.ibm.com>",
    "Michele Dolfi <dol@zurich.ibm.com>",
    "Panos Vagenas <pva@zurich.ibm.com>",
    "Maxim Lysak <mly@zurich.ibm.com>",
]
repository = "https://github.com/DS4SD/docling-parse"
homepage = "https://github.com/DS4SD/docling-parse"
keywords= ["docling", "pdf", "parser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3"
]
license = "MIT"
readme = "README.md"
packages = [{include = "docling_parse"}]
include = [
    {path = "docling_parse/*.so", format = "wheel"},
    {path = "docling_parse/pdf_resources", format = "wheel"}
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
pre-commit = "^3.7.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
py_version=310
