[tool.poetry]
name = "docling-parse"
version = "2.1.0"
description = "Simple package to extract text with coordinates from programmatic PDFs"
authors = ["Peter Staar <taa@zurich.ibm.com>"]
maintainers = [
    "Peter Staar <taa@zurich.ibm.com>",
    "Christoph Auer <cau@zurich.ibm.com>",
    "Michele Dolfi <dol@zurich.ibm.com>",
    "Panos Vagenas <pva@zurich.ibm.com>",
    "Maxim Lysak <mly@zurich.ibm.com>",
]
repository = "https://github.com/DS4SD/docling-parse"
homepage = "https://github.com/DS4SD/docling-parse"
keywords= ["docling", "pdf", "parser"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3"
]
license = "MIT"
readme = "README.md"
packages = [{include = "docling_parse"}]
include = [
    {path = "docling_parse/*.so", format = "wheel"},
    {path = "docling_parse/*.pyd", format = "wheel"},
    {path = "docling_parse/*.dll", format = "wheel"},
    {path = "docling_parse/pdf_resources", format = ["sdist", "wheel"]},
    {path = "docling_parse/pdf_resources", format = ["sdist", "wheel"]},
    {path = "docling_parse/pdf_resources_v2", format = ["sdist", "wheel"]},
    {path = "CMakeLists.txt", format = "sdist"},
    {path = "build.py", format = "sdist"},
    {path = "*.md", format = "sdist"},
    {path = "poetry.lock", format = "sdist"},
    {path = "app/*.cpp", format = "sdist"},
    {path = "cmake/", format = "sdist"},
    {path = "app/", format = "sdist"},
    {path = "src/", format = "sdist"},
    {path = "tests/", format = "sdist"},
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
tabulate = ">=0.9.0,<1.0.0"
pywin32 = { version = ">=305", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
python-semantic-release = "^7.32.2"
pre-commit = "^3.7.1"
isort = "^5.10.1"

[tool.poetry.group.build.dependencies]
cibuildwheel = "^2.19.2"
wheel = "^0.43.0"
delocate = "^0.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.visualisation.dependencies]
pillow = "^10.4.0"
tqdm = "^4.67.0"

[tool.poetry.scripts]
docling-parse = "docling_parse.run:main"

[build-system]
requires = ["poetry-core", "pybind11>=2.13.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
py_version=310

[tool.semantic_release]
# for default values check:
# https://github.com/python-semantic-release/python-semantic-release/blob/v7.32.2/semantic_release/defaults.cfg

version_source = "tag_only"
branch = "main"

# configure types which should trigger minor and patch version bumps respectively
# (note that they must be a subset of the configured allowed types):
parser_angular_allowed_types = "build,chore,ci,docs,feat,fix,perf,style,refactor,test"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf"
